--- a/chatbot_website/chatbot_interface/templates/index.html
+++ b/chatbot_website/chatbot_interface/templates/index.html
@@ -26,8 +26,8 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="{% static 'images/avatar.jpg' %}" alt="" /></span>
-							<h1>Chatbot</h1>
-							<p>Welcome to this session!</p>
+							<h1>KP</h1>
+							<p>Welcomes you to this session!</p>
 						</header>
 						
 						<form id="chat_form">
@@ -45,18 +45,19 @@
 						<div id="chat_zone"></div>
 						
 						<hr />
-						
+						<!-- Footer
 						<footer>
 							<ul class="icons">
 								<li><a href="http://e-pot.xyz" class="fa-home">Home</a></li>
 								<li><a href="https://github.com/Conchylicultor/DeepQA" class="fa-github">Github</a></li>
 								<li><a href="mailto:etiennefg.pot@gmail.com" class="fa-envelope">Contact</a></li>
-								<!--<li><a href="#" class="fa-linkedin">LinkedIn</a></li>-->
+								<li><a href="#" class="fa-linkedin">LinkedIn</a></li>
 							</ul>
 						</footer>
+						-->
 					</section>
 
-				<!-- Footer -->
+				<!-- Footer
 					<footer id="footer">
 						<ul class="copyright">
 							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
@@ -64,6 +65,7 @@
 							<li>&copy; <a href="http://e-pot.xyz">Etienne Pot</a></li>
 						</ul>
 					</footer>
+				-->
 
 			</div>
 
